<resources>
    <string name="app_name">Calculator</string>
    <string name="c">C</string>
    <string name="open_braket">(</string>
    <string name="close_bracket">)</string>
    <string name="divison">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="ac">AC</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equal_to">=</string>
    <string name="multiply">*</string>
</resources>