<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_30ssp"
        android:textColor="@color/black"
        android:textAlignment="textEnd"
        android:layout_above="@+id/txtSolution"
        android:layout_marginHorizontal="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/txtSolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="@dimen/_45ssp"
        android:textColor="@color/black"
        android:textAlignment="textEnd"
        android:layout_above="@+id/btnLayout"
        android:layout_margin="@dimen/_10sdp"/>


   <LinearLayout
       android:id="@+id/btnLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:background="#C3EDF3"
       android:padding="@dimen/_5sdp"
       android:layout_alignParentBottom="true">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:orientation="horizontal">

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btnC"
               android:layout_width="@dimen/_50sdp"
               android:layout_height="@dimen/_50sdp"
               app:cornerRadius="36dp"
               style="@style/Widget.Design.FloatingActionButton"
               android:text="@string/c"
               android:textSize="@dimen/_25ssp"
               android:textColor="@color/white"
               android:layout_margin="@dimen/_10sdp"
               app:backgroundTint="#FF5722"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btnOpenBracket"
               android:layout_width="@dimen/_50sdp"
               android:layout_height="@dimen/_50sdp"
               app:cornerRadius="36dp"
               style="@style/Widget.Design.FloatingActionButton"
               android:text="@string/open_braket"
               android:textAlignment="center"
               android:textSize="@dimen/_25ssp"
               android:textColor="@color/white"
               android:layout_margin="@dimen/_10sdp"
               app:backgroundTint="#00BCD4"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btnCloseBracket"
               android:layout_width="@dimen/_50sdp"
               android:layout_height="@dimen/_50sdp"
               app:cornerRadius="36dp"
               style="@style/Widget.Design.FloatingActionButton"
               android:text="@string/close_bracket"
               android:textSize="@dimen/_25ssp"
               android:textAlignment="center"
               android:textColor="@color/white"
               android:layout_margin="@dimen/_10sdp"
               app:backgroundTint="#00BCD4"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btnDivide"
               android:layout_width="@dimen/_50sdp"
               android:layout_height="@dimen/_50sdp"
               app:cornerRadius="36dp"
               style="@style/Widget.Design.FloatingActionButton"
               android:text="@string/divison"
               android:textSize="@dimen/_25ssp"
               android:textColor="@color/white"
               android:layout_margin="@dimen/_10sdp"
               app:backgroundTint="#FF9800"/>

       </LinearLayout>

       <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="horizontal">

       <com.google.android.material.button.MaterialButton
           android:id="@+id/btn7"
           android:layout_width="@dimen/_50sdp"
           android:layout_height="@dimen/_50sdp"
           app:cornerRadius="36dp"
           style="@style/Widget.Design.FloatingActionButton"
           android:text="@string/_7"
           android:textSize="@dimen/_25ssp"
           android:textColor="@color/white"
           android:layout_margin="@dimen/_10sdp"
           app:backgroundTint="#009688"/>
       <com.google.android.material.button.MaterialButton
           android:id="@+id/btn8"
           android:layout_width="@dimen/_50sdp"
           android:layout_height="@dimen/_50sdp"
           app:cornerRadius="36dp"
           style="@style/Widget.Design.FloatingActionButton"
           android:text="@string/_8"
           android:textSize="@dimen/_25ssp"
           android:textColor="@color/white"
           android:layout_margin="@dimen/_10sdp"
           app:backgroundTint="#009688"/>
       <com.google.android.material.button.MaterialButton
           android:id="@+id/btn9"
           android:layout_width="@dimen/_50sdp"
           android:layout_height="@dimen/_50sdp"
           app:cornerRadius="36dp"
           style="@style/Widget.Design.FloatingActionButton"
           android:text="@string/_9"
           android:textSize="@dimen/_25ssp"
           android:textColor="@color/white"
           android:layout_margin="@dimen/_10sdp"
           app:backgroundTint="#009688"/>
       <com.google.android.material.button.MaterialButton
           android:id="@+id/btnMultiply"
           android:layout_width="@dimen/_50sdp"
           android:layout_height="@dimen/_50sdp"
           app:cornerRadius="36dp"
           style="@style/Widget.Design.FloatingActionButton"
           android:text="@string/multiply"
           android:textSize="@dimen/_25ssp"
           android:textColor="@color/white"
           android:layout_margin="@dimen/_10sdp"
           app:backgroundTint="#FF9800"/>

   </LinearLayout>

       <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="horizontal">

       <com.google.android.material.button.MaterialButton
           android:id="@+id/btn4"
           android:layout_width="@dimen/_50sdp"
           android:layout_height="@dimen/_50sdp"
           app:cornerRadius="36dp"
           style="@style/Widget.Design.FloatingActionButton"
           android:text="@string/_4"
           android:textSize="@dimen/_25ssp"
           android:textColor="@color/white"
           android:layout_margin="@dimen/_10sdp"
           app:backgroundTint="#009688"/>
       <com.google.android.material.button.MaterialButton
           android:id="@+id/btn5"
           android:layout_width="@dimen/_50sdp"
           android:layout_height="@dimen/_50sdp"
           app:cornerRadius="36dp"
           style="@style/Widget.Design.FloatingActionButton"
           android:text="@string/_5"
           android:textSize="@dimen/_25ssp"
           android:textColor="@color/white"
           android:layout_margin="@dimen/_10sdp"
           app:backgroundTint="#009688"/>
       <com.google.android.material.button.MaterialButton
           android:id="@+id/btn6"
           android:layout_width="@dimen/_50sdp"
           android:layout_height="@dimen/_50sdp"
           app:cornerRadius="36dp"
           style="@style/Widget.Design.FloatingActionButton"
           android:text="@string/_6"
           android:textSize="@dimen/_25ssp"
           android:textColor="@color/white"
           android:layout_margin="@dimen/_10sdp"
           app:backgroundTint="#009688"/>
       <com.google.android.material.button.MaterialButton
           android:id="@+id/btnMinus"
           android:layout_width="@dimen/_50sdp"
           android:layout_height="@dimen/_50sdp"
           app:cornerRadius="36dp"
           style="@style/Widget.Design.FloatingActionButton"
           android:text="@string/minus"
           android:textSize="@dimen/_25ssp"
           android:textColor="@color/white"
           android:layout_margin="@dimen/_10sdp"
           app:backgroundTint="#FF9800"/>

   </LinearLayout>

       <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="horizontal">

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn1"
               android:layout_width="@dimen/_50sdp"
               android:layout_height="@dimen/_50sdp"
               android:layout_margin="@dimen/_10sdp"
               style="@style/Widget.Design.FloatingActionButton"
               android:text="1"
               android:textColor="@color/white"
               android:textSize="@dimen/_25ssp"
               app:backgroundTint="#009688"
               app:cornerRadius="36dp" />

           <com.google.android.material.button.MaterialButton
           android:id="@+id/btn2"
           android:layout_width="@dimen/_50sdp"
           android:layout_height="@dimen/_50sdp"
           app:cornerRadius="36dp"
           style="@style/Widget.Design.FloatingActionButton"
           android:text="2"
           android:textSize="@dimen/_25ssp"
           android:textColor="@color/white"
               android:layout_margin="@dimen/_10sdp"
           app:backgroundTint="#009688"/>
       <com.google.android.material.button.MaterialButton
           android:id="@+id/btn3"
           android:layout_width="@dimen/_50sdp"
           android:layout_height="@dimen/_50sdp"
           app:cornerRadius="36dp"
           style="@style/Widget.Design.FloatingActionButton"
           android:text="3"
           android:textSize="@dimen/_25ssp"
           android:textColor="@color/white"
           android:layout_margin="@dimen/_10sdp"
           app:backgroundTint="#009688"/>
       <com.google.android.material.button.MaterialButton
           android:id="@+id/btnPlus"
           android:layout_width="@dimen/_50sdp"
           android:layout_height="@dimen/_50sdp"
           app:cornerRadius="36dp"
           style="@style/Widget.Design.FloatingActionButton"
           android:text="+"
           android:textSize="@dimen/_25ssp"
           android:textColor="@color/white"
           android:layout_margin="@dimen/_10sdp"
           app:backgroundTint="#FF9800"/>

   </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:orientation="horizontal">

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btnAllClear"
               android:layout_width="@dimen/_50sdp"
               android:layout_height="@dimen/_50sdp"
               app:cornerRadius="36dp"
               style="@style/Widget.Design.FloatingActionButton"
               android:text="@string/ac"
               android:textSize="@dimen/_12ssp"
               android:textColor="@color/white"
               android:layout_margin="@dimen/_10sdp"
               app:backgroundTint="#FF5722"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btnZero"
               android:layout_width="@dimen/_50sdp"
               android:layout_height="@dimen/_50sdp"
               app:cornerRadius="36dp"
               style="@style/Widget.Design.FloatingActionButton"
               android:text="@string/_0"
               android:textSize="@dimen/_25ssp"
               android:textColor="@color/white"
               android:layout_margin="@dimen/_10sdp"
               app:backgroundTint="#009688"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btnDecimal"
               android:layout_width="@dimen/_50sdp"
               android:layout_height="@dimen/_50sdp"
               app:cornerRadius="36dp"
               style="@style/Widget.Design.FloatingActionButton"
               android:text="@string/point"
               android:textSize="@dimen/_25ssp"
               android:textColor="@color/white"
               android:layout_margin="@dimen/_10sdp"
               app:backgroundTint="#009688"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btnEqual"
               android:layout_width="@dimen/_50sdp"
               android:layout_height="@dimen/_50sdp"
               app:cornerRadius="36dp"
               style="@style/Widget.Design.FloatingActionButton"
               android:text="@string/equal_to"
               android:textSize="@dimen/_25ssp"
               android:textColor="@color/white"
               android:layout_margin="@dimen/_10sdp"
               app:backgroundTint="#FF9800"/>

       </LinearLayout>

   </LinearLayout>

</RelativeLayout>